Fixed main menu z-index issue, made the map generator more responsive (min 640px).

--- a/styles/dev.css
+++ b/styles/dev.css
@@ -2,7 +2,9 @@
 /* -- MAP GENERATOR STYLESHEET -- */
 
 .test_area {
-    width: 976px;
+    width: auto;
+    min-width: 640px;
+    /* width: 976px; */
     /* height: 244px; */
     border: 0 none transparent;
     margin: 0 auto 10px;
