--- a/styles/index.css
+++ b/styles/index.css
@@ -505,13 +505,13 @@ button {
     position: relative;
     font-size: 0;
     height: 30px;
-    z-index: 20;
+    z-index: 30;
 }
 #window .menu .subs {
     display: none;
     position: absolute;
-    z-index: 10;
     top: 30px;
+    z-index: 30;
     margin: 0 auto 0 -25px;
     padding: 5px 10px;
     width: auto;
